--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RocketCoffee</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>RocketCoffee</h1>
+        <h1>Rocket<span>Coffee</span></h1>
         <p>Aberto todos os dias, das 8h às 20h!</p>
     </header>
 
@@ -48,5 +49,43 @@
         </ul>
 
     </section>
+
+    <section>
+        <h2>Bebidas</h2>
+
+        <ul>
+            <li>
+                <div class="details">
+                    <h3>Água</h3>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+
+                <strong class="price">R$37,70</strong>
+
+            </li>
+
+            <li>
+                <div class="details">
+                    <h3>Refrigerante</h3>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+
+                <strong class="price">R$37,70</strong>
+
+            </li>
+
+            <li>
+                <div class="details">
+                    <h3>Sucos</h3>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+
+                <strong class="price">R$37,70</strong>
+
+            </li>
+        </ul>
+
+    </section>    
+    
 </body>
 </html>
